# EpochProtos

./: .gitignore  CMakeLists.txt  README.md  VCPKG_DISTRIBUTION.md  nextjs-usage-example.md  quick-deploy  requirements.txt  test_python_package.py  vcpkg.json
.github/workflows/: deploy-npm.yml
cmake/: EpochProtosConfig.cmake.in
cpp/include/epoch_protos/: chart_def.pb.cc  chart_def.pb.h  common.pb.cc  common.pb.h  table_def.pb.cc  table_def.pb.h  tearsheet.pb.cc  tearsheet.pb.h
example_consumer/: CMakeLists.txt  main.cpp  vcpkg.json
ports/epoch-protos/: portfile.cmake  vcpkg.json
proto/: chart_def.proto  common.proto  table_def.proto  tearsheet.proto
python/: setup.py
scripts/: README.md  build_and_copy.sh  fix_python_imports.py  master_workflow.sh  python_publish.sh  sync_versions.sh  typescript_publish.sh  version_manager.sh
test/: EpochProtos.code-workspace  test_cpp.cpp  test_python.py
test_project/: CMakeLists.txt
typescript/: package.json
